{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 62,
  "lineage": "56452c10-fd04-5b35-ae93-0c1b060042bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "sangchul-alb-web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:099678655650:loadbalancer/app/sangchul-alb-web1/310d5866fdf49bd1",
            "arn_suffix": "app/sangchul-alb-web1/310d5866fdf49bd1",
            "dns_name": "sangchul-alb-web1-1750577375.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:099678655650:loadbalancer/app/sangchul-alb-web1/310d5866fdf49bd1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sangchul-alb-web1",
            "security_groups": [
              "sg-0b0acf4e1444c1658"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-053149d01573202c5"
              },
              {
                "subnet_id": "subnet-06709a51cf89ff0bf"
              }
            ],
            "subnets": [
              "subnet-053149d01573202c5",
              "subnet-06709a51cf89ff0bf"
            ],
            "tags": {
              "Name": "sangchul-alb-web1"
            },
            "vpc_id": "vpc-0293e2c996bcf0886",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sangchul_vpc11-alb-web1",
            "aws_subnet.sangchul_vpc11-sb3",
            "aws_subnet.sangchul_vpc11-sb4",
            "aws_vpc.sangchul_vpc11"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:099678655650:listener/app/sangchul-alb-web1/310d5866fdf49bd1/413a017e08c0204c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:099678655650:listener/app/sangchul-alb-web1/310d5866fdf49bd1/413a017e08c0204c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:099678655650:loadbalancer/app/sangchul-alb-web1/310d5866fdf49bd1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.sangchul-alb-web1",
            "aws_security_group.sangchul_vpc11-alb-web1",
            "aws_subnet.sangchul_vpc11-sb3",
            "aws_subnet.sangchul_vpc11-sb4",
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "sangchul-alb-tg-web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:099678655650:targetgroup/sangchul-alb-tg-web1/d09bb246471e5751",
            "arn_suffix": "targetgroup/sangchul-alb-tg-web1/d09bb246471e5751",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:099678655650:targetgroup/sangchul-alb-tg-web1/d09bb246471e5751",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sangchul-alb-tg-web1",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul-alb-tg-web1",
              "Owner": "iac",
              "Role": "alb",
              "Service": "network"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "sangchul_vpc11-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0fa87e4a4d317a2e3",
            "id": "rtb-0fa87e4a4d317a2e3",
            "owner_id": "099678655650",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e9a82b30db10822",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-rt",
              "Owner": "iac",
              "Role": "route",
              "Service": "network"
            },
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sangchul_vpc11-igw",
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sangchul_redis31",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047a51fa27710816e",
            "arn": "arn:aws:ec2:us-east-1:099678655650:instance/i-0b7371b7eb9395922",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7371b7eb9395922",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sangchul4wxyz",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2425927a4c0354a",
            "private_dns": "ip-10-11-3-160.ec2.internal",
            "private_ip": "10.11.3.160",
            "public_dns": "ec2-54-167-84-207.compute-1.amazonaws.com",
            "public_ip": "54.167.84.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03d399c376719b5db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06709a51cf89ff0bf",
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_redis31",
              "Owner": "iac",
              "Role": "redis",
              "Service": "ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065276e8e5171e68a"
            ]
          },
          "dependencies": [
            "aws_key_pair.sangchul_4wxyz",
            "aws_security_group.sangchul_vpc11-ec2-web1",
            "aws_subnet.sangchul_vpc11-sb3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sangchul_web31",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047a51fa27710816e",
            "arn": "arn:aws:ec2:us-east-1:099678655650:instance/i-00cafe846dedb385e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cafe846dedb385e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sangchul4wxyz",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-062fb322059359011",
            "private_dns": "ip-10-11-3-191.ec2.internal",
            "private_ip": "10.11.3.191",
            "public_dns": "ec2-54-91-207-239.compute-1.amazonaws.com",
            "public_ip": "54.91.207.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00069e9046f5fccfc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06709a51cf89ff0bf",
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_web31",
              "Owner": "iac",
              "Role": "web",
              "Service": "ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065276e8e5171e68a"
            ]
          },
          "dependencies": [
            "aws_key_pair.sangchul_4wxyz",
            "aws_security_group.sangchul_vpc11-ec2-web1",
            "aws_subnet.sangchul_vpc11-sb3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sangchul_web41",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047a51fa27710816e",
            "arn": "arn:aws:ec2:us-east-1:099678655650:instance/i-05d10bb6fc529f051",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d10bb6fc529f051",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sangchul4wxyz",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb78271928d75f79",
            "private_dns": "ip-10-11-4-195.ec2.internal",
            "private_ip": "10.11.4.195",
            "public_dns": "ec2-3-239-238-101.compute-1.amazonaws.com",
            "public_ip": "3.239.238.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-083b6c6b5c763e83a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053149d01573202c5",
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_web41",
              "Owner": "iac",
              "Role": "web",
              "Service": "ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065276e8e5171e68a"
            ]
          },
          "dependencies": [
            "aws_key_pair.sangchul_4wxyz",
            "aws_security_group.sangchul_vpc11-ec2-web1",
            "aws_subnet.sangchul_vpc11-sb4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sangchul_vpc11-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099678655650:internet-gateway/igw-01e9a82b30db10822",
            "id": "igw-01e9a82b30db10822",
            "owner_id": "099678655650",
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-igw",
              "Owner": "iac",
              "Role": "internet_gateway",
              "Service": "network"
            },
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sangchul_vpc11-rt-pri01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a79aa06b15019e3e",
            "owner_id": "099678655650",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-rt-pri01",
              "Owner": "iac",
              "Role": "route",
              "Service": "network"
            },
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sangchul_vpc11-sb13",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046bb8bed6cd0e3d2",
            "route_table_id": "rtb-0a79aa06b15019e3e",
            "subnet_id": "subnet-0ea2962e84fda84fa"
          },
          "dependencies": [
            "aws_route_table.sangchul_vpc11-rt-pri01",
            "aws_subnet.sangchul_vpc11-sb13",
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sangchul_vpc11-sb14",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e808387310400709",
            "route_table_id": "rtb-0a79aa06b15019e3e",
            "subnet_id": "subnet-0681b24771dad2956"
          },
          "dependencies": [
            "aws_route_table.sangchul_vpc11-rt-pri01",
            "aws_subnet.sangchul_vpc11-sb14",
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sangchul_vpc11-sb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053e218afc2032fa4",
            "route_table_id": "rtb-0fa87e4a4d317a2e3",
            "subnet_id": "subnet-06709a51cf89ff0bf"
          },
          "dependencies": [
            "aws_subnet.sangchul_vpc11-sb3",
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sangchul_vpc11-sb4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db275acd0ad64e9e",
            "route_table_id": "rtb-0fa87e4a4d317a2e3",
            "subnet_id": "subnet-053149d01573202c5"
          },
          "dependencies": [
            "aws_subnet.sangchul_vpc11-sb4",
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sangchul_vpc11-alb-web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099678655650:security-group/sg-0b0acf4e1444c1658",
            "description": "Managed In Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any open",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0acf4e1444c1658",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any-443port open",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any-80port open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sangchul_vpc11-alb-web1",
            "name_prefix": "",
            "owner_id": "099678655650",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-alb-web1",
              "Owner": "iac",
              "Role": "security_group",
              "Service": "security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sangchul_vpc11-ec2-office1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099678655650:security-group/sg-028844a9c6103ede2",
            "description": "Managed In Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any open",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028844a9c6103ede2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any-22port open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sangchul_vpc11-ec2-office1",
            "name_prefix": "",
            "owner_id": "099678655650",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-ec2-office1",
              "Owner": "iac",
              "Role": "security_group",
              "Service": "security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sangchul_vpc11-ec2-redis1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099678655650:security-group/sg-0146566e9afc57914",
            "description": "Managed In Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any open",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0146566e9afc57914",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any-6379port open",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "sangchul_vpc11-ec2-redis1",
            "name_prefix": "",
            "owner_id": "099678655650",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-ec2-redis1",
              "Owner": "iac",
              "Role": "security_group",
              "Service": "security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sangchul_vpc11-ec2-web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099678655650:security-group/sg-065276e8e5171e68a",
            "description": "Managed In Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any open",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065276e8e5171e68a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any-22port open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sangchul_vpc11-ec2-web1",
            "name_prefix": "",
            "owner_id": "099678655650",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-ec2-web1",
              "Owner": "iac",
              "Role": "security_group",
              "Service": "security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sangchul_vpc11-sb13",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099678655650:subnet/subnet-0ea2962e84fda84fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.11.13.0/24",
            "id": "subnet-0ea2962e84fda84fa",
            "map_public_ip_on_launch": false,
            "owner_id": "099678655650",
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-sb13",
              "Owner": "iac",
              "Role": "subnet",
              "Service": "network"
            },
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sangchul_vpc11-sb14",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099678655650:subnet/subnet-0681b24771dad2956",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.14.0/24",
            "id": "subnet-0681b24771dad2956",
            "map_public_ip_on_launch": false,
            "owner_id": "099678655650",
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-sb14",
              "Owner": "iac",
              "Role": "subnet",
              "Service": "network"
            },
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sangchul_vpc11-sb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099678655650:subnet/subnet-06709a51cf89ff0bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.11.3.0/24",
            "id": "subnet-06709a51cf89ff0bf",
            "map_public_ip_on_launch": true,
            "owner_id": "099678655650",
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-sb3",
              "Owner": "iac",
              "Role": "subnet",
              "Service": "network"
            },
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sangchul_vpc11-sb4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099678655650:subnet/subnet-053149d01573202c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.4.0/24",
            "id": "subnet-053149d01573202c5",
            "map_public_ip_on_launch": true,
            "owner_id": "099678655650",
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11-sb4",
              "Owner": "iac",
              "Role": "subnet",
              "Service": "network"
            },
            "vpc_id": "vpc-0293e2c996bcf0886"
          },
          "dependencies": [
            "aws_vpc.sangchul_vpc11"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sangchul_vpc11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:099678655650:vpc/vpc-0293e2c996bcf0886",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0beee0f018f7445a6",
            "default_route_table_id": "rtb-0fa87e4a4d317a2e3",
            "default_security_group_id": "sg-042ea4bcf8ccdf96e",
            "dhcp_options_id": "dopt-c0e5a2ba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0293e2c996bcf0886",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fa87e4a4d317a2e3",
            "owner_id": "099678655650",
            "tags": {
              "CreateUser": "terraform@email.com",
              "Env": "stg",
              "Name": "sangchul_vpc11",
              "Owner": "iac",
              "Role": "vpc",
              "Service": "network"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}